[package]
name = "timeout-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
poise = { version = "0.6.1-rc1", default-features = false }
serenity = { version = "0.12.0", default-features = false, features = ["rustls_backend"] }
tokio = { version = "1.35.1", features = ["rt", "macros"] }
